--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                 <h3>8. Kontak</h3>
                 <p>Jika Anda memiliki pertanyaan tentang kebijakan privasi ini, silakan hubungi kami melalui:</p>
                 <ul>
-                    <li>Email: privacy@serverdiamond.com</li>
+                    <li>Email: privacy@serverdiamond.cfd</li>
                     <li>WhatsApp: +62 889-8094-3928</li>
                 </ul>
             </div>
