--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                 <h3>10. Kontak</h3>
                 <p>Untuk pertanyaan tentang syarat dan ketentuan, hubungi kami melalui:</p>
                 <ul>
-                    <li>Email: legal@serverdiamond.com</li>
+                    <li>Email: legal@serverdiamond.cfd</li>
                     <li>WhatsApp: +62 812-3456-7890</li>
                 </ul>
             </div>
@@ -718,8 +718,8 @@
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
                             <h4>Email</h4>
-                            <p>support@serverdiamond.com</p>
-                            <a href="mailto:support@serverdiamond.com" class="contact-link">Kirim Email</a>
+                            <p>support@serverdiamond.cfd</p>
+                            <a href="mailto:support@serverdiamond.cfd" class="contact-link">Kirim Email</a>
                         </div>
                     </div>
                     <div class="col-md-4 mb-4">
